Fix content cutoff

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ i {
 @media only screen and (min-width: 1100px) {
   #content {
     width: 960px;
-    height: 600px;
+    height: 610px;
   }
 
   #headshot {
